@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/gdb-6.8-r1.ebuild,v 1.8 2009/02/01 19:29:31 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/gdb-6.8-r1.ebuild,v 1.9 2009/02/22 19:45:43 vapier Exp $
 
 inherit flag-o-matic eutils
 
@@ -11,7 +11,7 @@ if [[ ${CTARGET} == ${CHOST} ]] ; then
 	fi
 fi
 
-PATCH_VER="1.3"
+PATCH_VER="1.4"
 DESCRIPTION="GNU debugger"
 HOMEPAGE="http://sources.redhat.com/gdb/"
 SRC_URI="http://ftp.gnu.org/gnu/gdb/${P}.tar.bz2
@@ -43,7 +43,7 @@ src_compile() {
 	strip-unsupported-flags
 	econf \
 		--disable-werror \
-		--with-system-readline \
+		$(has_version '=sys-libs/readline-5*' && echo --with-system-readline) \
 		$(use_enable nls) \
 		$(use multitarget && echo --enable-targets=all) \
 		|| die
@@ -51,7 +51,7 @@ src_compile() {
 }
 
 src_test() {
-	make check || ewarn "tests failed"
+	emake check || ewarn "tests failed"
 }
 
 src_install() {
