@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gdb
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.150 2009/02/01 19:29:31 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.151 2009/02/22 19:45:43 vapier Exp $
+
+  22 Feb 2009; Mike Frysinger <vapier@gentoo.org> gdb-6.8-r1.ebuild:
+  Use system readline only if it is version 5 #259865 by michel.
 
   01 Feb 2009; nixnut <nixnut@gentoo.org> gdb-6.8-r1.ebuild:
   ppc stable #255219
